--- a/src/index.css
+++ b/src/index.css
@@ -1384,11 +1384,10 @@ header {
 .show-product-sec-imgs > img {
   border-radius: 12px;
   width: 100%;
-  height: 100%;
-  max-height: 450px;
-  object-fit: cover;
+  max-height: 475px;
+  object-fit: contain;
   /* box-shadow: 10px 10px 10px rgba(63, 63, 63, 0.092); */
-  box-shadow: 10px 10px 10px rgba(63, 63, 63, 0.208);
+  box-shadow: 0px 0px 10px rgba(63, 63, 63, 0.208);
 }
 .show-product-sec-imgs .product-imgs {
   margin-top: 15px;
@@ -1404,6 +1403,7 @@ header {
 .product-imgs img {
   width: 100%;
   height: 100%;
+  max-height: 150px;
   object-fit: cover;
 }
 
